--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,24 @@ dev = [
     "mypy>=1.17.0",
     "ruff>=0.12.3",
 ]
+
+[tool.mypy]
+strict = true
+exclude = [".venv"]
+
+[tool.ruff]
+target-version = "py312"
+exclude = ["alembic"]
+
+line-length = 120
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle Error
+    "F",  # Pyflakes
+    "I",  # isort
+    "W",  # pycodestyle Warning
+]
+ignore = [
+    "E501",  # line-too-long
+]
