--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,15 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.3.1",
+    "pandas>=2.3.1",
+    "scikit-learn>=1.7.1",
     "torch>=2.7.1",
 ]
 
 [dependency-groups]
 dev = [
     "mypy>=1.17.0",
+    "pytest>=8.4.1",
     "ruff>=0.12.3",
 ]
 
@@ -34,4 +37,9 @@ select = [
 ]
 ignore = [
     "E501",  # line-too-long
+]
+
+[tool.uv.workspace]
+members = [
+    "tsf-classification",
 ]
